--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
           <h1 class="text-title">
             Эффективные решения<br />для вашего бизнеса
           </h1>
-          <button type="button" class="button">Заказать услугу</button>
+          <button data-modal-open type="button" class="button">
+            Заказать услугу
+          </button>
         </div>
       </section>
 
@@ -129,17 +131,36 @@
           <h2 class="title-we-do">Чем мы занимаемся</h2>
           <ul class="list-img">
             <li class="list-item-img">
-              <img src="./images/img.jpg" alt="написание сайтов" width="370" />
+              <div class="card-we-do">
+                <img
+                  src="./images/img.jpg"
+                  alt="написание сайтов"
+                  width="370"
+                />
+                <div class="picture-description">
+                  <p>Десктопные приложения</p>
+                </div>
+              </div>
             </li>
             <li class="list-item-img">
-              <img
-                src="./images/img1.jpg"
-                alt="написание приложений"
-                width="370"
-              />
+              <div class="card-we-do">
+                <img
+                  src="./images/img1.jpg"
+                  alt="написание приложений"
+                  width="370"
+                />
+                <div class="picture-description">
+                  <p>Мобильные приложения</p>
+                </div>
+              </div>
             </li>
             <li class="list-item-img">
-              <img src="./images/img2.jpg" alt="дизайн" width="370" />
+              <div class="card-we-do">
+                <img src="./images/img2.jpg" alt="дизайн" width="370" />
+                <div class="picture-description">
+                  <p>Дизайнерские решения</p>
+                </div>
+              </div>
             </li>
           </ul>
         </div>
@@ -477,5 +498,16 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button data-modal-close class="button-close">
+          <svg width="17px" height="17px">
+            <use href="./images/icons/symbol-defs.svg#icon-close"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+
+    <script src="./js/modal.js"></script>
   </body>
 </html>
