--- a/portfolio.html
+++ b/portfolio.html
@@ -88,8 +88,20 @@
           <h1 class="visually-hidden">Наши проекты</h1>
           <ul class="content-portfolio">
             <li class="item-projects">
-              <a href="/" class="link-img"
-                ><img src="./images/image1.jpg" alt="Технокряк" width="370" />
+              <a href="/" class="link-img">
+                <div class="overlay-item-projects">
+                  <img src="./images/image1.jpg" alt="Технокряк" width="370" />
+                  <div class="overlay">
+                    <div class="overlay-item">
+                      <p>
+                        Ресурс предлагает комплексные предложения с разным
+                        уровнем функционала и сервисов. Все это позволит
+                        посетителю получить исчерпывающие сведения о компании
+                        или частном лице.
+                      </p>
+                    </div>
+                  </div>
+                </div>
                 <div class="item-text">
                   <h3 class="projects">Технокряк</h3>
                   <p>Веб-сайт</p>
@@ -97,12 +109,24 @@
               </a>
             </li>
             <li class="item-projects">
-              <a href="/" class="link-img"
-                ><img
-                  src="./images/image2.jpg"
-                  alt="Постер New Orlean vs Golden Star"
-                  width="370"
-                />
+              <a href="/" class="link-img">
+                <div class="overlay-item-projects">
+                  <img
+                    src="./images/image2.jpg"
+                    alt="Постер New Orlean vs Golden Star"
+                    width="370"
+                  />
+                  <div class="overlay">
+                    <div class="overlay-item">
+                      <p>
+                        Ресурс предлагает комплексные предложения с разным
+                        уровнем функционала и сервисов. Все это позволит
+                        посетителю получить исчерпывающие сведения о компании
+                        или частном лице.
+                      </p>
+                    </div>
+                  </div>
+                </div>
                 <div class="item-text">
                   <h3 class="projects">Постер New Orlean vs Golden Star</h3>
                   <p>Дизайн</p>
@@ -110,12 +134,24 @@
               </a>
             </li>
             <li class="item-projects">
-              <a href="/" class="link-img"
-                ><img
-                  src="./images/image3.jpg"
-                  alt="Ресторан Seafood"
-                  width="370"
-                />
+              <a href="/" class="link-img">
+                <div class="overlay-item-projects">
+                  <img
+                    src="./images/image3.jpg"
+                    alt="Ресторан Seafood"
+                    width="370"
+                  />
+                  <div class="overlay">
+                    <div class="overlay-item">
+                      <p>
+                        Ресурс предлагает комплексные предложения с разным
+                        уровнем функционала и сервисов. Все это позволит
+                        посетителю получить исчерпывающие сведения о компании
+                        или частном лице.
+                      </p>
+                    </div>
+                  </div>
+                </div>
                 <div class="item-text">
                   <h3 class="projects">Ресторан Seafood</h3>
                   <p>Приложение</p>
@@ -123,12 +159,25 @@
               </a>
             </li>
             <li class="item-projects">
-              <a href="/" class="link-img"
-                ><img
-                  src="./images/image4.jpg"
-                  alt="Проект Prime"
-                  width="370"
-                />
+              <a href="/" class="link-img">
+                <div class="overlay-item-projects">
+                  <img
+                    src="./images/image4.jpg"
+                    alt="Проект Prime"
+                    width="370"
+                  />
+                  <div class="overlay">
+                    <div class="overlay-item">
+                      <p>
+                        Ресурс предлагает комплексные предложения с разным
+                        уровнем функционала и сервисов. Все это позволит
+                        посетителю получить исчерпывающие сведения о компании
+                        или частном лице.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+
                 <div class="item-text">
                   <h3 class="projects">Проект Prime</h3>
                   <p>Маркетинг</p>
@@ -136,12 +185,25 @@
               </a>
             </li>
             <li class="item-projects">
-              <a href="/" class="link-img"
-                ><img
-                  src="./images/image5.jpg"
-                  alt="Проект Boxes"
-                  width="370"
-                />
+              <a href="/" class="link-img">
+                <div class="overlay-item-projects">
+                  <img
+                    src="./images/image5.jpg"
+                    alt="Проект Boxes"
+                    width="370"
+                  />
+                  <div class="overlay">
+                    <div class="overlay-item">
+                      <p>
+                        Ресурс предлагает комплексные предложения с разным
+                        уровнем функционала и сервисов. Все это позволит
+                        посетителю получить исчерпывающие сведения о компании
+                        или частном лице.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+
                 <div class="item-text">
                   <h3 class="projects">Проект Boxes</h3>
                   <p>Приложение</p>
@@ -149,12 +211,24 @@
               </a>
             </li>
             <li class="item-projects">
-              <a href="/" class="link-img"
-                ><img
-                  src="./images/image6.jpg"
-                  alt="Inspiration has no Borders"
-                  width="370"
-                />
+              <a href="/" class="link-img">
+                <div class="overlay-item-projects">
+                  <img
+                    src="./images/image6.jpg"
+                    alt="Inspiration has no Borders"
+                    width="370"
+                  />
+                  <div class="overlay">
+                    <div class="overlay-item">
+                      <p>
+                        Ресурс предлагает комплексные предложения с разным
+                        уровнем функционала и сервисов. Все это позволит
+                        посетителю получить исчерпывающие сведения о компании
+                        или частном лице.
+                      </p>
+                    </div>
+                  </div>
+                </div>
                 <div class="item-text">
                   <h3 class="projects">Inspiration has no Borders</h3>
                   <p>Веб-сайт</p>
@@ -162,12 +236,25 @@
               </a>
             </li>
             <li class="item-projects">
-              <a href="/" class="link-img"
-                ><img
-                  src="./images/image7.jpg"
-                  alt="Издание Limited Edition"
-                  width="370"
-                />
+              <a href="/" class="link-img">
+                <div class="overlay-item-projects">
+                  <img
+                    src="./images/image7.jpg"
+                    alt="Издание Limited Edition"
+                    width="370"
+                  />
+                  <div class="overlay">
+                    <div class="overlay-item">
+                      <p>
+                        Ресурс предлагает комплексные предложения с разным
+                        уровнем функционала и сервисов. Все это позволит
+                        посетителю получить исчерпывающие сведения о компании
+                        или частном лице.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+
                 <div class="item-text">
                   <h3 class="projects">Издание Limited Edition</h3>
                   <p>Дизайн</p>
@@ -175,8 +262,21 @@
               </a>
             </li>
             <li class="item-projects">
-              <a href="/" class="link-img"
-                ><img src="./images/image8.jpg" alt="Проект LAB" width="370" />
+              <a href="/" class="link-img">
+                <div class="overlay-item-projects">
+                  <img src="./images/image8.jpg" alt="Проект LAB" width="370" />
+                  <div class="overlay">
+                    <div class="overlay-item">
+                      <p>
+                        Ресурс предлагает комплексные предложения с разным
+                        уровнем функционала и сервисов. Все это позволит
+                        посетителю получить исчерпывающие сведения о компании
+                        или частном лице.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+
                 <div class="item-text">
                   <h3 class="projects">Проект LAB</h3>
                   <p>Маркетинг</p>
@@ -184,12 +284,25 @@
               </a>
             </li>
             <li class="item-projects">
-              <a href="/" class="link-img"
-                ><img
-                  src="./images/image9.jpg"
-                  alt="Growing Business"
-                  width="370"
-                />
+              <a href="/" class="link-img">
+                <div class="overlay-item-projects">
+                  <img
+                    src="./images/image9.jpg"
+                    alt="Growing Business"
+                    width="370"
+                  />
+                  <div class="overlay">
+                    <div class="overlay-item">
+                      <p>
+                        Ресурс предлагает комплексные предложения с разным
+                        уровнем функционала и сервисов. Все это позволит
+                        посетителю получить исчерпывающие сведения о компании
+                        или частном лице.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+
                 <div class="item-text">
                   <h3 class="projects">Growing Business</h3>
                   <p>Приложение</p>
